test/compile_errors/stage1/obj/wrong_type_passed_to_panic.zig
export fn entry() void {
    var e = error.Foo;
    @panic(e);
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:12: error: expected type '[]const u8', found 'error{Foo}'
